hphp/hack/test/typecheck/readonly/static_prop.php.exp
File "static_prop.php", line 16, characters 5-21:
Invalid property assignment (Typing[4411])
  File "static_prop.php", line 16, characters 25-42:
  This expression is readonly
  File "static_prop.php", line 9, characters 22-32:
  But it's being assigned to a mutable property
File "static_prop.php", line 22, characters 3-18:
Invalid property assignment (Typing[4411])
  File "static_prop.php", line 22, characters 22-39:
  This expression is readonly
  File "static_prop.php", line 9, characters 22-32:
  But it's being assigned to a mutable property
File "static_prop.php", line 31, characters 5-6:
This value is readonly, its properties cannot be modified (Typing[4409])
